# tts-service

./: .env.example  .gitignore  README.md  pyproject.toml
tests/: helpers.py  test_dedupe.py  test_http_source.py  test_pipeline.py  test_status_store.py  test_sword_status_store.py  test_volume_control.py  test_watch_sword_response.py  test_windows_sapi.py
tts_service/: __init__.py
tts_service/adapters/: __init__.py
tts_service/adapters/players/: __init__.py  file_output.py  local_speaker.py  noop.py  preview_tone.py  volume_control.py
tts_service/adapters/sources/: __init__.py  http_source.py  stdin_source.py  sword_status_store.py
tts_service/adapters/status/: __init__.py  json_status_store.py
tts_service/adapters/synthesizers/: __init__.py  noop.py  openai_tts.py  voicevox.py  windows_sapi.py
tts_service/adapters/volume/: __init__.py  json_volume_store.py
tts_service/apps/: list_voices.py  set_volume.py  speak_text.py  watch_sword_response.py
tts_service/core/: __init__.py  chunking.py  dedupe.py  pipeline.py  runtime.py  types.py
tts_service/ports/: player.py  source.py  status_sink.py  synthesizer.py  volume.py
